--- a/index.html
+++ b/index.html
@@ -8,38 +8,54 @@
     <link rel="stylesheet" href="style.css">
     <script src="https://kit.fontawesome.com/51e25768ff.js" crossorigin="anonymous"></script>
 </head>
-<body>
-    <header>
-        <h1 class="titulo-proyecto ubicacion-row">
-            Generador de Memes
-        </h1>
-        <nav>
-            <ul class="ubicacion-row lista-nav">
-                <li>
-                    <a href="" class="boton-nav ubicacion-row">
-                        <i class="fa-regular fa-file-image"></i>
-                        <p>Imagen</p>
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="boton-nav ubicacion-row">
-                        <i class="fa-solid fa-a"></i>
-                        <p>Texto</p> 
-                    </a>
-                </li>
-                <li>
-                    <a href="" class="boton-nav ubicacion-row">
-                        <i class="fa-regular fa-lightbulb"></i>
-                        <p>Modo oscuro</p>
-                    </a>
-                </li>
-            </ul>
-        </nav>
-    </header>
+<body class="ubicacion-row">
+    <main>
+        <div class="contenedor-uno ubicacion-column">
+            <h1 class="titulo-proyecto ubicacion-row">
+                Generador de Memes
+            </h1>
+            <nav>
+                <ul class="ubicacion-row lista-nav">
+                    <li>
+                        <a href="" class="boton-nav ubicacion-row">
+                            <i class="fa-regular fa-file-image"></i>
+                            <p>Imagen</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="boton-nav ubicacion-row">
+                            <i class="fa-solid fa-a"></i>
+                            <p>Texto</p> 
+                        </a>
+                    </li>
+                    <li>
+                        <a href="" class="boton-nav ubicacion-row">
+                            <i class="fa-regular fa-lightbulb"></i>
+                            <p>Modo oscuro</p>
+                        </a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
 
-    <main></main>
+        <div class="ubicacion-column contenedor-memes">
+            <h2 class="campo-texto">
+                TOP TEXT
+            </h2>
+            <div class="contenedor-img">
+                <img src="" alt="">
+            </div>
+            <h2 class="campo-texto">
+                BOTTOM TEXT
+            </h2>
+        </div>
+    </main>
 
-    <aside></aside>
+    <aside class="ubicacion-row barra-edicion">
+        <h3>
+            IMAGEN
+        </h3>
+    </aside>
 
     <script src="script.js"></script>
 </body>
