--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body class="ubicacion-row">
     <main>
-        <div class="contenedor-uno ubicacion-column">
+        <div class="seccion-botones ubicacion-column">
             <h1 class="titulo-proyecto ubicacion-row">
                 Generador de Memes
             </h1>
@@ -42,8 +42,8 @@
                 BOTTOM TEXT
             </h2>
         </div>
-        <div>
-            <input type="submit" value="Descargar">
+        <div class="boton-descarga">
+            <input type="submit" value="Descargar meme" class="descargar-meme">
         </div>
     </main>
 
