Modifique la manera de insertar la imagen

--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
         </div>
 
         <div class="ubicacion-column contenedor-memes">
-            <h2 id="top-text">
+            <h2 id="top-text" class="campo-texto">
                 TOP TEXT
             </h2>
-            <div class="contenedor-img sin-texto-sup1">
-                <img src="" alt="" id="imagen-meme" class="imagen-edit sin-texto-sup2">
+            <div class="contenedor-img sin-texto-sup1" id="imagen-meme">
+                <!-- <img src="" alt="" id="imagen-meme" class="imagen-edit sin-texto-sup2"> -->
             </div>
-            <h2 id="bottom-text">
+            <h2 id="bottom-text" class="campo-texto">
                 BOTTOM TEXT
             </h2>
         </div>
@@ -60,7 +60,7 @@
                 <p>FONDO</p>
                 <div class="ubicacion-row">
                     <label>
-                        <input id="" name="" type="color" class="diseño-form">
+                        <input id="color-fondo" name="" type="color" class="diseño-form">
                     </label>
                     <label>
                         <select name="fondo" id="" form="editor-imagen" class="diseño-form">
