Funcionalidad JS: Cambio color letras

--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
             </ul>
         </div>
 
-        <div class="ubicacion-column contenedor-memes">
-            <h2 id="top-text" class="campo-texto">
+        <div id="contenedor-meme" class="ubicacion-column contenedor-memes">
+            <h2 id="top-text" class="campo-texto1">
                 TOP TEXT
             </h2>
-            <div class="contenedor-img sin-texto-sup1" id="imagen-meme">
+            <div class="contenedor-img sin-texto" id="imagen-meme">
                 <!-- <img src="" alt="" id="imagen-meme" class="imagen-edit sin-texto-sup2"> -->
             </div>
-            <h2 id="bottom-text" class="campo-texto">
+            <h2 id="bottom-text" class="campo-texto2">
                 BOTTOM TEXT
             </h2>
         </div>
@@ -163,6 +163,14 @@
                         <i class="fa-solid fa-align-right"></i>
                     </button>
                 </div>
+                <div>
+                    <label for="color-texto">COLOR</label>
+                    <input type="color" id="color-texto">
+                
+                    <label for="color-fondo">FONDO</label>
+                    <input type="color" id="color-fondo">
+                </div>    
+
             </div>
         </form>
     </aside>
